@@ -6,6 +6,7 @@ Version CVS HEAD (?)
   * SoundFont file format
     - initial implementation
     - changed region lookup API to avoid malloc in RT threads
+    - fixed GetEG1Sustain which didn't return correct value
 
   * src/gig.cpp:
     - bugfix: VCF velocity dynamic range and VCF velocity curve
